# chasing_utils

./: .gitignore  CMakeLists.txt  README.md  package.xml
analysis/: MultiTarget.bag  analyzer.m  draw_ellipse.m  factoryOctomap.mat
analysis/map24/: map.mat
exe/: OfflineLibraryGenerator.cpp  Prediction.cpp
include/chasing_utils/: Library.h  Observer.h  TargetManager.h  Utils.h  progressbar.hpp
launch/: offline_library_generation.launch  target_manager.launch
launch/zed/: zed_target_manager.launch
param/: octomap_zed.yaml  target_manager.yaml
param/lib/: chaser_collision_2s.yaml  chaser_occlusion_2s.yaml  target2d_1s.yaml  target2d_2s.yaml  target2d_3s.yaml
rviz/: library.rviz  prediction.rviz
src/: Library.cpp  Observer.cpp  TargetManager.cpp  Utils.cpp
